# AgentSpawnMCP

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SPEC.md  example.env  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
agent_spawn_mcp/: __init__.py  __main__.py  server.py  utils.py
agent_spawn_mcp/agent_spawn/: server.py
agent_spawn_mcp/agent_spawn/tools/: __init__.py  base.py  registry.py
agent_spawn_mcp/config/: __init__.py  loader.py  models.py
agent_spawn_mcp/providers/: __init__.py  base.py  openai_compat.py
agent_spawn_mcp/tools/: agent.py  chat.py  files.py  info.py  search.py  vision.py
configs/: default.yaml
src/: __init__.py  __main__.py  server.py  utils.py
src/agent_spawn/: __init__.py
src/agent_spawn/tools/: base.py
src/config/: __init__.py  loader.py  models.py
src/providers/: base.py  openai_compat.py
src/tools/: __init__.py  agent.py  chat.py  info.py  search.py
tests/: test_agent_spawn_tool.py  test_cli.py  test_info_tools.py  test_request_shape.py  test_server_inline_provider.py  test_url_construction.py
