[project]
name = "agent-spawn-mcp"
version = "1.0.0"
description = "Universal MCP server for any OpenAI-compatible LLM. Supports OpenAI and Anthropic API formats."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "llm", "openai", "anthropic", "universal", "agent"]
dependencies = [
    "mcp[cli]>=1.13.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "typer>=0.21.0",
]

[project.scripts]
agent-spawn = "src.__main__:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
