[project]
name = "agent-spawn-mcp"
version = "1.1.0"
description = "Universal MCP server for any OpenAI-compatible LLM. Supports OpenAI and Anthropic API formats."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "llm", "openai", "anthropic", "universal", "agent"]
license = {text = "MIT"}
authors = [
    {name = "Michael Makarov", email = "michael@pleroma.studio"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.13.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "typer>=0.21.0",
]

[project.scripts]
agent-spawn-mcp = "src.__main__:app"

[project.urls]
Homepage = "https://github.com/sandsaber/AgentSpawnMCP"
Issues = "https://github.com/sandsaber/AgentSpawnMCP/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
